testdata/errors/no_gomod/types.go
package testdata

type NoGomod struct {
	Field string
}
